# nnml

./: .gitignore  README.md  format.sh
cu/: CMakeLists.txt
cu/.cache/clangd/index/: deform_conv2d.cu.F5986BC3042FA3CE.idx  utils.cuh.7EA023E436F50826.idx
cu/include/: utils.cuh
cu/sgemm/: CMakeLists.txt
cu/sgemm/src/kernels/: kernel_global_mem_coalesce.cuh  naive.cuh
cu/src/: deform_conv2d.cu
ml/: cal_cov_matrix.py  cal_eigenvalues.md  cal_eigenvalues.py  cal_matrix_mean.py  cross_validation_split.py  deform_conv.py  determinant_4x4.md  determinant_4x4.py  feature_scaling.py  k_means_clustering.py  kl_div_normal.md  kl_div_normal.py  learn_decision_tree.py  linear_regression_gradient_descent.py  linear_regression_normal_equation.md  linear_regression_normal_equation.py  matrix_dot_vector.py  pegasos_kernel_svm.py  ridge_loss.py  softmax.py  solve_jacobi.md  solve_jacobi.py  svd_2x2_singular_values.py  transform_basis.py  transform_matrix.py  transpose_matrix.py
nn/LoRA/: lora.md  lora.py
nn/generative_models /GAN/: gan.md  gan.py
nn/gpt2/: configurator.py  model.py  play.ipynb  train.py
nn/swim_transformer/: model.py
nn/transformer/: attention.py  decoder.py  embed.py  encoder.py  ffn.py  relative_attn.py  transformer.py  utils.py
nn/vit/: model.py  vit.py
